pkl-core/src/test/files/LanguageSnippetTests/input/errors/nested1.pkl
a {
  b {
    c {
      x = outer.outer // nested syntax error
    }
  }
}